# -*- mode: python -*-
# vi: set ft=python :

# Copyright 2020 Massachusetts Institute of Technology.
# Licensed under the BSD 3-Clause License. See LICENSE.TXT for details.

load("//htmlbook/tools/jupyter:defs.bzl", "rt_ipynb_test")

rt_ipynb_test(
    name = "highlights",
    srcs = ["highlights.ipynb"],
    data = ["//manipulation/models"],
    # Open3D 0.10.0 is not compatible with Python 3.9.
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    deps = ["//manipulation"],
)

rt_ipynb_test(
    name = "jacobian",
    srcs = ["jacobian.ipynb"],
)

rt_ipynb_test(
    name = "messy_icp",
    srcs = ["messy_icp.ipynb"],
    # Open3D 0.10.0 is not compatible with Python 3.9.
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
)

rt_ipynb_test(
    name = "qp_diff_ik",
    srcs = ["qp_diff_ik.ipynb"],
    data = ["//manipulation/models:two_link_iiwa14.urdf"],
    deps = ["//manipulation"],
)
