# -*- mode: python -*-
# vi: set ft=python :

# Copyright 2020-2023 Massachusetts Institute of Technology.
# Licensed under the BSD 3-Clause License. See LICENSE.TXT for details.

load("//htmlbook/tools/jupyter:defs.bzl", "rt_ipynb_test")

rt_ipynb_test(
    name = "mecanum",
    srcs = ["mecanum.ipynb"],
    data = ["//manipulation/models"],
    deps = [
      "//manipulation",
      "//manipulation:meshcat_utils",
    ],
)


rt_ipynb_test(
    name = "mobile_iiwa",
    srcs = ["mobile_iiwa.ipynb"],
    deps = [
      "//manipulation",
      "//manipulation:station",
    ],
)


# TODO(russt): Pre-download the model
#rt_ipynb_test(
#    name = "spot",
#    srcs = ["spot.ipynb"],
#    deps = [
#      "//manipulation",
#    ],
#)

rt_ipynb_test(
    name = "pr2",
    srcs = ["pr2.ipynb"],
    deps = [
      "//manipulation",
      "//manipulation:station",
    ],
)
