# -*- mode: python -*-
# vi: set ft=python :

# Copyright 2020-2022 Massachusetts Institute of Technology.
# Licensed under the BSD 3-Clause License. See LICENSE.TXT for details.

load("//htmlbook/tools/jupyter:defs.bzl", "rt_ipynb_test")

rt_ipynb_test(
    name = "pick",
    srcs = ["pick.ipynb"],
    deps = [
      "//manipulation",
      "//manipulation:scenarios",
    ],
)

rt_ipynb_test(
    name = "kinematic_tree",
    srcs = ["kinematic_tree.ipynb"],
)

rt_ipynb_test(
    name = "forward_kinematics",
    srcs = ["forward_kinematics.ipynb"],
    deps = [
      "//manipulation",
      "//manipulation:scenarios",
    ],
)

rt_ipynb_test(
    name = "qdot_vs_v",
    srcs = ["qdot_vs_v.ipynb"],
)

rt_ipynb_test(
    name = "jacobian",
    srcs = ["jacobian.ipynb"],
    deps = [
      "//manipulation",
      "//manipulation:scenarios",
    ],
)

rt_ipynb_test(
    name = "grasp",
    srcs = ["grasp.ipynb"],
    deps = [
      "//manipulation",
      "//manipulation:scenarios",
    ],
)
