# -*- mode: python -*-
# vi: set ft=python :

# Copyright 2020-2022 Massachusetts Institute of Technology.
# Licensed under the BSD 3-Clause License. See LICENSE.TXT for details.

load("//htmlbook/tools/jupyter:defs.bzl", "rt_ipynb_test")

rt_ipynb_test(
    name = "camera_sim",
    srcs = ["camera_sim.ipynb"],
    data = ["//manipulation/models"],
    tags = ["no-sandbox"],  # from vtk-test-tags() in drake
    deps = [
      "//manipulation",
      "//manipulation:scenarios",
    ],
)

rt_ipynb_test(
    name = "icp",
    srcs = ["icp.ipynb"],
    deps = [
      "//manipulation",
    ],
)

rt_ipynb_test(
    name = "pose",
    srcs = ["pose.ipynb"],
    data = ["//manipulation/models"],
    tags = ["no-sandbox"],  # from vtk-test-tags() in drake
    deps = [
      "//manipulation",
      "//manipulation:icp",
      "//manipulation:mustard_depth_camera_example",
      "//manipulation:meshcat_utils",
      "//manipulation:scenarios",
    ],
)