# -*- mode: python -*-
# vi: set ft=python :

# Copyright 2020-2022 Massachusetts Institute of Technology.
# Licensed under the BSD 3-Clause License. See LICENSE.TXT for details.

load("//htmlbook/tools/jupyter:defs.bzl", "rt_ipynb_test")

rt_ipynb_test(
    name = "inspector",
    srcs = ["inspector.ipynb"],
    deps = [
      "//manipulation",
      "//manipulation:meshcat_utils",
    ],
)

rt_ipynb_test(
    name = "simulation",
    srcs = ["simulation.ipynb"],
    deps = ["//manipulation"],
)

rt_ipynb_test(
    name = "bimanual",
    srcs = ["bimanual.ipynb"],
    deps = [
      "//manipulation",
      "//manipulation:scenarios",
    ],
)

rt_ipynb_test(
    name = "iiwa_with_allegro",
    srcs = ["iiwa_with_allegro.ipynb"],
    deps = [
      "//manipulation",
    ],
)
