# -*- mode: python -*-
# vi: set ft=python :

# Copyright 2020-2022 Massachusetts Institute of Technology.
# Licensed under the BSD 3-Clause License. See LICENSE.TXT for details.

load("//htmlbook/tools/jupyter:defs.bzl", "rt_ipynb_test")

rt_ipynb_test(
    name = "interactive_ik",
    srcs = ["interactive_ik.ipynb"],
    deps = [
      "//manipulation",
      "//manipulation:meshcat_utils",
      "//manipulation:scenarios",
    ],
)

rt_ipynb_test(
    name = "cspace",
    srcs = ["cspace.ipynb"],
    deps = [
      "//manipulation",
      "//manipulation:scenarios",
    ],
)

rt_ipynb_test(
    name = "iris_in_configuration_space",
    srcs = ["iris_in_configuration_space.ipynb"],
    deps = [
      "//manipulation",
      "//manipulation:meshcat_utils",
      "//manipulation:scenarios",
    ],
)


rt_ipynb_test(
    name = "kinematic_trajectory_optimization",
    srcs = ["kinematic_trajectory_optimization.ipynb"],
    deps = [
      "//manipulation",
      "//manipulation:meshcat_utils",
      "//manipulation:scenarios",
    ],
)

rt_ipynb_test(
    name = "optimization_landscape",
    srcs = ["optimization_landscape.ipynb"],
    deps = [
      "//manipulation",
      "//manipulation:meshcat_utils",
      "//manipulation:scenarios",
    ],
)

rt_ipynb_test(
    name = "rrt",
    srcs = ["rrt.ipynb"],
    deps = [
      "//manipulation",
      "//manipulation:scenarios",
    ],
)