# -*- mode: python -*-
# vi: set ft=python :

# Copyright 2020-2024 Massachusetts Institute of Technology.
# Licensed under the BSD 3-Clause License. See LICENSE.TXT for details.

load("//book/htmlbook/tools/python:requirements.bzl", "requirement")
load("//book/htmlbook/tools/jupyter:defs.bzl", "rt_ipynb_test")

rt_ipynb_test(
    name = "mecanum",
    srcs = ["mecanum.ipynb"],
    data = ["//manipulation/models"],
    deps = [
      "//manipulation",
      "//manipulation:meshcat_utils",
    ],
)

rt_ipynb_test(
    name = "mobile_iiwa",
    srcs = ["mobile_iiwa.ipynb"],
    deps = [
      "//manipulation",
      "//manipulation:station",
    ],
)

rt_ipynb_test(
    name = "rainbow",
    srcs = ["rainbow.ipynb"],
    tags = ["requires-network", "no-sandbox"],
    deps = [
      "//manipulation",
      "//manipulation:remotes",
    ],
)

rt_ipynb_test(
    name = "scene_synthesizer",
    srcs = ["scene_synthesizer.ipynb"],
    tags = ["requires-network", "no-sandbox"], # for rainbow
    deps = [
      "//manipulation",
      "//manipulation:remotes",
      requirement("scene_synthesizer"),
    ],
)

rt_ipynb_test(
    name = "spot",
    srcs = ["spot.ipynb"],
    tags = ["requires-network", "no-sandbox"],
    deps = [
      "//manipulation",
      "//manipulation:remotes",
      "//manipulation:station",
    ],
)

rt_ipynb_test(
    name = "pr2",
    srcs = ["pr2.ipynb"],
    deps = [
      "//manipulation",
      "//manipulation:station",
    ],
)
