# -*- mode: python -*-
# vi: set ft=python :

# Copyright 2020-2023 Massachusetts Institute of Technology.
# Licensed under the BSD 3-Clause License. See LICENSE.TXT for details.

load("@pip_deps//:requirements.bzl", "requirement")
load("//book/htmlbook/tools/jupyter:defs.bzl", "rt_ipynb_test")

rt_ipynb_test(
    name = "camera_sim",
    srcs = ["camera_sim.ipynb"],
    data = ["//manipulation/models"],
    tags = ["no-sandbox"],  # from vtk-test-tags() in drake
    deps = [
      "//manipulation",
      "//manipulation:scenarios",
      "//manipulation:station",
    ],
)

rt_ipynb_test(
    name = "icp",
    srcs = ["icp.ipynb"],
    deps = [
      "//manipulation",
      requirement("scipy"),
    ],
)

rt_ipynb_test(
    name = "pose",
    srcs = ["pose.ipynb"],
    data = ["//manipulation/models"],
    tags = ["no-sandbox"],  # from vtk-test-tags() in drake
    deps = [
      "//manipulation",
      "//manipulation:icp",
      "//manipulation:mustard_depth_camera_example",
      "//manipulation:meshcat_utils",
      "//manipulation:pick",
      "//manipulation:scenarios",
      "//manipulation:station",
    ],
)