# -*- mode: python -*-
# vi: set ft=python :

# Copyright 2020-2024 Massachusetts Institute of Technology.
# Licensed under the BSD 3-Clause License. See LICENSE.TXT for details.

load("//book/htmlbook/tools/python:requirements.bzl", "requirement")
load("//book/htmlbook/tools/jupyter:defs.bzl", "rt_ipynb_test")
load("//book/htmlbook/tools/python:defs.bzl", "rt_py_test")

rt_ipynb_test(
    name = "black_box",
    srcs = ["black_box.ipynb"],
    deps = [
      "//manipulation",
      "//manipulation:meshcat_utils",
    ],
)

rt_ipynb_test(
    name = "box_flipup",
    srcs = ["box_flipup.ipynb"],
    data = ["//book/data:box_flipup_ppo_state.zip"],
    deps = [
      "//manipulation",
      "//manipulation:meshcat_utils",
      "//manipulation/envs:box_flipup",
      requirement("psutil"),
      requirement("stable_baselines3"),
    ],
)

#rt_py_test(
#  name = "train_boxflipup",
#    srcs = ["train_boxflipup.py"],
#    args = ["--test"],
#    imports = [".."],
#    deps = [
#      "//manipulation/envs:box_flipup",
#    ],
#)
