# -*- mode: python -*-
# vi: set ft=python :

# Copyright 2020-2024 Massachusetts Institute of Technology.
# Licensed under the BSD 3-Clause License. See LICENSE.TXT for details.

load("//book/htmlbook/tools/jupyter:defs.bzl", "rt_ipynb_test")

rt_ipynb_test(
    name = "inspector",
    srcs = ["inspector.ipynb"],
    deps = [
      "//manipulation",
      "//manipulation:make_drake_compatible_model",
    ],
)

rt_ipynb_test(
    name = "menagerie",
    srcs = ["menagerie.ipynb"],
    tags = ["requires-network", "no-sandbox"],
    deps = [
      "//manipulation",
      "//manipulation:make_drake_compatible_model",
      "//manipulation:remotes",
    ],
)

rt_ipynb_test(
    name = "gymnasium_robotics",
    srcs = ["gymnasium_robotics.ipynb"],
    tags = ["requires-network", "no-sandbox"],
    deps = [
      "//manipulation",
      "//manipulation:make_drake_compatible_model",
      "//manipulation:remotes",
    ],
)

rt_ipynb_test(
    name = "simulation",
    srcs = ["simulation.ipynb"],
    deps = ["//manipulation"],
)

rt_ipynb_test(
    name = "bimanual",
    srcs = ["bimanual.ipynb"],
    deps = [
      "//manipulation",
      "//manipulation:station",
    ],
)

rt_ipynb_test(
    name = "iiwa_with_allegro",
    srcs = ["iiwa_with_allegro.ipynb"],
    deps = [
      "//manipulation",
      "//manipulation:station",
    ],
)

rt_ipynb_test(
    name = "rubiks_cube",
    data = ["//manipulation/models"],
    srcs = ["rubiks_cube.ipynb"],
    deps = [
      "//manipulation",
    ],
)
